css styling, added tables

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         <div class="login_header">
           <h3>LOGIN</h3>
         </div>
-        <form class="login_form">
+        <form class="login_form" method="post">
           <input type="text" placeholder="USERNAME"/>
           <input type="password" placeholder="PASSWORD"/>
           <input type="submit" value="LOGIN">
