--- a/pets_list.html
+++ b/pets_list.html
@@ -14,7 +14,8 @@
 
 	<main>
 		<h1>PET PROFILES</h1>
-		<p>A fake website showcasing pets to practice HTML. </p> <br>
+		<p>Visit <a href="pet_statistics.html">Pet Statistics</a> for information on popular pets.</p>
+		<p>Submit your pet's profile at <a href="submit_pet.html">Pet Profile Form</a></p> <br>
 		<ul>
 			<li><a href="pet_pages/max.html">Max</a></li>
 			<li><a href="pet_pages/mitzy_and_mau.html">Mitzy and Mau</a></li>
