--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
         <div class="register_header">
           <h3>REGISTER</h3>
         </div>
-        <form class="register_form">
+        <form class="register_form" method="post">
           <input type="text" placeholder="USERNAME"/>
           <input type="password" placeholder="PASSWORD"/>
           <input type="password" placeholder="CONFIRM PASSWORD"/>
