--- a/pet_pages/mycousinvinny.html
+++ b/pet_pages/mycousinvinny.html
@@ -4,20 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<title> M. C. Vinny - Pet </title>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/mobile_style.css" medi="screen and (max-width:500px)"/>
+	<link rel="stylesheet" href="../css/style.css" media="screen and (min-width:501px)" />
 </head>
 
 <body>
 	<header>
-		<a href="index.html"><img src="images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
-		<nav class="navbar">
+		<a class="website_home" href="../index.html"><img src="../images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
+
+		<nav class="navbar_menu">
+			<h2>MENU</h2>
+			<div class="navbar_menuitems">
 			<ul>
-				<li><a href="max.html">Max</a></li>
-				<li><a href="mitzy_and_mau.html">Mitzy and Mau</a></li>
-				<li><a href="mycousinvinny.html">My Cousin Vinny</a></li>
-				<li><a href="css_lab.html">CSS Lab</a></li>
-				<li><a href="files_page.html">Files</a></li>
+				<li><a href="../login.html">LOGIN</a></li>
+				<li><a href="../register.html">REGISTER</a></li>
+				<li><a href="../pets_list.html">PETS ARCHIVE</a></li>
+				<li><a href="../assignment_details.html">ASSIGNMENT DETAILS</a></li>
 			</ul>
+			</div>
 		</nav>
 	</header>
 
@@ -31,7 +35,10 @@
 
 	<div class="images">
 		<figure>
-			<img src="../images/mycousinvinny.png" alt="Image of grey tabby cat." title = "My Cousin Vinny" width="320" height="240" />
+			<picture>
+					<source media="(max-width:500px)" srcset="../images/mycousinvinny_small.png" />
+					<img src="../images/mycousinvinny.png" alt="Image of grey tabby cat." title = "My Cousin Vinny"/>
+			</picture>
 			<figcaption>My Cousin Vinny chilling.</figcaption>
 		</figure>
 	</div>
