--- a/pet_pages/max.html
+++ b/pet_pages/max.html
@@ -4,44 +4,55 @@
 <head>
 	<meta charset="utf-8">
 	<title> Max - Pet </title>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/mobile_style.css" medi="screen and (max-width:500px)"/>
+	<link rel="stylesheet" href="../css/style.css" media="screen and (min-width:501px)" />
 </head>
 
 <body>
 	<header>
-		<a href="index.html"><img src="images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
-		<nav class="navbar">
+		<a class="website_home" href="../index.html"><img src="../images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
+
+		<nav class="navbar_menu">
+			<h2>MENU</h2>
+			<div class="navbar_menuitems">
 			<ul>
-				<li><a href="max.html">Max</a></li>
-				<li><a href="mitzy_and_mau.html">Mitzy and Mau</a></li>
-				<li><a href="mycousinvinny.html">My Cousin Vinny</a></li>
-				<li><a href="css_lab.html">CSS Lab</a></li>
-				<li><a href="files_page.html">Files</a></li>
+				<li><a href="../login.html">LOGIN</a></li>
+				<li><a href="../register.html">REGISTER</a></li>
+				<li><a href="../pets_list.html">PETS ARCHIVE</a></li>
+				<li><a href="../assignment_details.html">ASSIGNMENT DETAILS</a></li>
 			</ul>
+			</div>
 		</nav>
 	</header>
 
-	<h1>Max</h1>
-	<article>
-		<p id="problem4">A grey domestic shorthair cat born in 2011. 
-			<br> Max initially lived his life as an indoor cat.
-			<br> When we moved to a small farm, he patrolled the field.
-			<br> Now he is once again an indoor cat,
-			<br> and doesn't wander any further than the backyard patio.
-			<br> He becomes a pickier eater as he gets older.
-		</p>
-	</article>
+	<main>
+		<h1>Max</h1>
+		<article>
+			<p id="problem4">A grey domestic shorthair cat born in 2011. 
+				<br> Max initially lived his life as an indoor cat.
+				<br> When we moved to a small farm, he patrolled the field.
+				<br> Now he is once again an indoor cat,
+				<br> and doesn't wander any further than the backyard patio.
+				<br> He becomes a pickier eater as he gets older.
+			</p>
+		</article>
 
-	<div class="images">
-		<figure>
-			<img src="../images/max_beanbag.png" alt="Image of grey cat on a bean bag chair." title = "Max 2018" width="320" height="240" />
-			<figcaption>Max on a beanbag chair 2018.</figcaption>
-		</figure>
-		<figure>
-			<img src="../images/max_hat.png" alt="Image of grey cat wearing a baby Yoda hat." title = "Cat in a hat" width="320" height="240"/>
-			<figcaption>Max wearing a baby Yoda hat.</figcaption>
-		</figure>
-	</div>
-	
+		<div class="images">
+			<figure>
+				<picture>
+					<source media="(max-width:500px)" srcset="../images/max_beanbag_small.png" />
+					<img alt="Image of grey cat on a bean bag chair." title = "Max 2018" src="../images/max_beanbag.png" />
+				</picture>
+				<figcaption>Max on a beanbag chair 2018.</figcaption>
+			</figure>
+			<figure>
+				<picture>
+					<source media="(max-width:500px)" srcset="../images/max_hat_small.png" />
+					<img alt="Image of grey cat wearing a baby Yoda hat." title = "Cat in a hat" src="../images/max_hat.png" />
+				</picture>
+				<figcaption>Max wearing a baby Yoda hat.</figcaption>
+			</figure>
+		</div>
+	</main>
 </body>
 </html>
