--- a/pet_statistics.html
+++ b/pet_statistics.html
@@ -4,19 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>Pet Statistics</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mobile_style.css" medi="screen and (max-width:500px)"/>
+	<link rel="stylesheet" href="css/style.css" media="screen and (min-width:501px)" />
 </head>
 
 <body>
 	<header>
-		<a class="active" href="index.html"><img src="images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
-		<nav class="navbar">
+		<a class="website_home" href="index.html"><img src="images/pet_archive_logo.png" alt="Archive logo." title = "Home" width="105" height="50" /></a>
+
+		<nav class="navbar_menu">
+			<h2>MENU</h2>
+			<div class="navbar_menuitems">
 			<ul>
 				<li><a href="login.html">LOGIN</a></li>
 				<li><a href="register.html">REGISTER</a></li>
 				<li><a href="pets_list.html">PETS ARCHIVE</a></li>
 				<li><a href="assignment_details.html">ASSIGNMENT DETAILS</a></li>
 			</ul>
+			</div>
 		</nav>
 	</header>
 
